@@ -40,6 +40,7 @@ setup(name="pretor",
            'pretor_grade_dbg=pretor.grade:grade_dbg_cli',
            'pretor-grade=pretor.repl:launch_repl',
            'pretor-export=pretor.export:export_cli',
+           'pretor-import=pretor.xsvimport:xsvimport_cli',
            'pretor-query=pretor.query:query_cli',
            ]},
       package_dir={'pretor': 'pretor'},
